--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "OpenSCAD",
-  "name": "OpenSCAD Playground",
+  "short_name": "VenusCAD",
+  "name": "VenusCAD - AI-Powered 3D CAD Editor",
   "icons": [
     {
       "src": "favicon.ico",
@@ -21,5 +21,5 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#000000"
 }
