--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,11 @@ REACT_APP_GROQ_API_KEY=your_groq_api_key_here
 
 # Optional: Keep Gemini for text-only fallback
 REACT_APP_GEMINI_API_KEY=your_gemini_api_key_here
+
+# Firebase Configuration
+REACT_APP_FIREBASE_API_KEY=your-api-key-here
+REACT_APP_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID=your-project-id
+REACT_APP_FIREBASE_STORAGE_BUCKET=your-project.appspot.com
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=123456789
+REACT_APP_FIREBASE_APP_ID=your-app-id
