--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "start:test": "npm run start:development",
     "start": "npm run start:development",
     "build": "NODE_ENV=production webpack --mode=production",
+    "vercel-build": "npm run build",
     "build:libs": "LIBS_BUILD_MODE=all webpack --config webpack.libs.config.js",
     "build:libs:clean": "LIBS_BUILD_MODE=clean webpack --config webpack.libs.config.js",
     "build:libs:wasm": "LIBS_BUILD_MODE=wasm webpack --config webpack.libs.config.js",
